removed the dat.gui stuff from gh-pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <script src="bower_components/three.js/build/three.min.js"></script>
-        <script src="bower_components/dat.gui/dat.gui.min.js"></script>
+        <!-- <script src="bower_components/dat.gui/dat.gui.min.js"></script> -->
 
         <div id="WebGL-output"></div>
         <canvas id="summit"></canvas>
